# katherine-fundraising

./: .gitignore  Cargo.toml  Makefile  README.md  build.sh
contract/: Makefile
contract/katherine-fundraising-contract/: Cargo.toml
contract/katherine-fundraising-contract/src/: lib.rs  types.rs  utils.rs
contract/katherine-fundraising-contract/src/standard_k1.rs/: claim.rs  deposit.rs  goal.rs  interest.rs  internal.rs  kickstarter.rs  mod.rs  withdraw.rs
contract/katherine-fundraising-contract/src/tests/: mod.rs
contract/scripts/: integration.sh  test2.sh
katherine-fundraising/: Cargo.toml
katherine-fundraising-contract/: Cargo.toml
katherine-fundraising-contract/src/: claim.rs  constants.rs  deposit.rs  goal.rs  interest.rs  interface.rs  internal.rs  kickstarter.rs  lib.rs  metapool.rs  supporter.rs  types.rs  utils.rs  withdraw.rs
katherine-fundraising/src/: account.rs  constants.rs  errors.rs  funder.rs  goal.rs  interface  interface.rs  internal.rs  iou_note.rs  kickstarter.rs  lib.rs  metapool.rs  supporter.rs  ticket.rs  types.rs  utils.rs
media/: lifecycle.drawio  logic.drawio  logic1.drawio  logic2.drawio
res/: katherine_fundraising.wasm
scripts/: big_test.sh  create_betatest_kickstarter_bearverse.sh  create_betatest_kickstarter_pembrock.sh  create_kickstarter.sh  create_kickstarter_2.sh  export_meta_pool.sh  integration.sh  integration_frontend.sh  integration_meta_pool.sh  release_multi_projects.sh  test2.sh
test-meta-pool/: Cargo.toml
test-p-token/: Cargo.toml
utils/: add_project_tokens.sh  create_project.sh  meta_yield.conf
(+11 files in other folders)
