[package]
name = "katherine-fundraising-contract"
version = "0.1.0"
edition = "2018"
authors = ["Narwallets.com <hello@narwallets.com>"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "3.1.0"
near-contract-standards = "3.1.1"
uint = "0.9.3"
slug = "0.1.4"

[profile.release]
codegen-units=1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
